# SoSeC

./: CMakeLists.txt
src/: main.cpp
src/app/: App.cpp  App.hpp  Types.hpp
src/app/core/: App.cpp  App.hpp  State.hpp
src/app/data/: SensorData.hpp
src/config/: ConfigHardware.hpp  ConfigSoftware.hpp
src/gui/: ChannelWidget.cpp  ChannelWidget.hpp  ConfigEditor.cpp  ConfigEditor.hpp  MainFrame.cpp  MainFrame.hpp
src/hw/: HardwareFactory.cpp  HardwareFactory.hpp  IHardware.hpp  RealHardware.cpp  RealHardware.hpp
src/hw/daq/: RedLabDAQ.cpp  RedLabDAQ.hpp
src/hw/leds/: LEDStrip.cpp  LEDStrip.hpp
src/hw/mock/: MockHardware.cpp  MockHardware.hpp
src/hw/mux/: TCA9548A.cpp
src/hw/power/: INA219.cpp  INA219.hpp
src/hw/real/: RealHardware.cpp  RealHardware.hpp
src/hw/real/daq/: RedLabDAQ.cpp  RedLabDAQ.hpp
src/hw/real/i2c/: I2CBus.cpp  I2CBus.hpp
src/hw/real/mux/: TCA9548A.cpp  TCA9548A.hpp
src/hw/real/power/: INA219.ccp  INA219.hpp  MuxedIna219.cpp  MuxedIna219.hpp
src/hw/real/relays/: RelayController.hpp
src/hw/relays/: RelayController.cpp
src/services/: CsvExporter.cpp  CsvExporter.hpp  LoggerService.cpp  LoggerService.hpp  TestRunner.cpp  TestRunner.hpp
src/util/: Utf8.hpp
